Melhora arquivo de configuração para OpenApi Code Generator.

--- a/specs/config.json
+++ b/specs/config.json
@@ -1,1 +1,12 @@
-{}
+{
+  "invokerPackage": "OpenCorreios",
+  "variableNamingConvention": "camelCase",
+  "srcBasePath": "src",
+  "legacyDiscriminatorBehavior": false,
+  "globalProperties": {
+    "apiDocs": true,
+    "modelDocs": false,
+    "modelTests": false,
+    "apiTests": false
+  }
+}
